# credit-risk-assessment-ai

./: .dockerignore  .gitignore  LICENSE  PROJECT_AUDIT.md  README.md  SETUP.md  START_HERE.md  UV_GUIDE.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  temp_pdf_extract.txt
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base_agent.py  collateral_evaluator.py  debt_analyzer.py  decision_writer.py  financial_data_collector.py  income_analyzer.py  risk_scorer.py
backend/app/: __init__.py  main.py  models.py
backend/calculations/: __init__.py  collateral_calculations.py  debt_calculations.py  income_calculations.py  risk_calculations.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/graphs/: __init__.py  credit_assessment_graph.py
backend/monitoring/: __init__.py  metrics.py
backend/services/: __init__.py  credit_assessment_service.py
docs/: METRICS.md
examples/: sample_application.json  sample_application_risky.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: creditApi.js
frontend/src/components/: ApplicationForm.jsx  Header.jsx  LoadingOverlay.jsx  ResultsDashboard.jsx
scripts/: README.md  add-package.bat  deploy-cloud-run.bat  deploy-cloud-run.sh  remove-package.bat  setup-uv.bat  start-all.bat  start-backend.bat  start-frontend.bat
