[project]
name = "credit-risk-assessment-ai"
version = "1.0.0"
description = "Multi-agent AI system for automated loan underwriting and credit risk assessment"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Houssam Alrachid", email = "houssam.alrachid@gmail.com"}
]
keywords = [
    "credit-risk",
    "loan-underwriting",
    "langchain",
    "langgraph",
    "langsmith",
    "fastapi",
    "ai-agents",
    "banking"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "langchain>=0.3.1",
    "langchain-core>=0.3.6",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.28",
    "openai>=1.47.0",
    "langsmith>=0.1.125",
    "httpx>=0.27.2",
    "aiohttp>=3.10.5",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/credit-risk-assessment-ai"
Documentation = "https://github.com/your-repo/credit-risk-assessment-ai#readme"
Repository = "https://github.com/your-repo/credit-risk-assessment-ai"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "__pycache__"]

[tool.flake8]
max-line-length = 127
exclude = [".venv", "__pycache__", ".git"]
ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "agents", "config", "graphs", "services"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
