[project]
name = "credit-risk-backend"
version = "1.0.0"
description = "Credit Risk Assessment AI - Backend API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "langchain>=0.3.1",
    "langchain-core>=0.3.6",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.28",
    "openai>=1.47.0",
    "langsmith>=0.1.125",
    "httpx>=0.27.2",
    "aiohttp>=3.10.5",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
packages = ["app", "agents", "config", "graphs", "services"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
